--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.8",
-    "axios": "^1.7.2",
+    "axios": "^1.7.4",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
     "url": "^0.11.3"
   },
   "devDependencies": {
